<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/baseView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.LoginActivity">

    <ScrollView
        style="@style/baseViewContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingVertical="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tvAppLogoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:layout_marginTop="80dp" />

            <TextView
                style="@style/edTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="textStart"
                android:layout_marginTop="80dp" />

            <EditText
                android:id="@+id/ed_email"
                style="@style/edData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"
                tools:text=""/>

            <TextView
                style="@style/edTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="textStart"
                android:layout_marginTop="40dp" />

            <EditText
                android:id="@+id/ed_password"
                style="@style/edData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="8dp"
                tools:text=""/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                style="@style/btn"
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:minHeight="50dp"
                android:textColor="@color/white"
                android:text="@string/login" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>