<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/baseView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controllers.activity.StaffListActivity">

    <TextView
        style="@style/tvAppLogoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/staff_list"
        android:textAlignment="center" />

    <LinearLayout
        style="@style/baseViewContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/tvBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/token"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_token"
                style="@style/tvBase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="textStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/tvBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/tvBase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/tvBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_avatar"
                style="@style/tvBase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/tvBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_first_name"
                style="@style/tvBase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/tvBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tv_last_name"
                style="@style/tvBase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="textStart" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>